added simple web producer